added controller for task changes history
